0.7.0
[+] Added ItemField and ItemFieldType classes, these fields replace the old ItemData and ItemConfig classes by allowing extendable functionality for building ItemStack(s) directly from the config.
[/] Updated gradle shadow plugin.
[/] Switched to Mojang’s Brigadier command system.
[/] Switched to paper-plugin.yml
[/] Switched to kyori’s adventure API.
[/] Switched to @Nullable objects rather than Optionals.